# actix-template

./: .env  Cargo.toml  docker-compose.yml
sql/: schema.sql
src/: db.rs  handlers.rs  main.rs  models.rs  server_config.rs
